// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapValidator input input referenced in ConditionAtomNode with input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:22 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
    "warnings": "6:11 OutcomeStatement - Result Not Found: returning \\"JessieExpression\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in ConditionAtomNode with input then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "6:11 OutcomeStatement - Result Not Found: returning \\"JessieExpression\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in ConditionAtomNode with strict input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:22 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
    "warnings": "6:11 OutcomeStatement - Result Not Found: returning \\"JessieExpression\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in ConditionAtomNode with strict input then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "6:11 OutcomeStatement - Result Not Found: returning \\"JessieExpression\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in HttpCallStatement with input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "8:22 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
1:12 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
11:29 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
    "warnings": "16:15 OutcomeStatement - Result Not Found: returning \\"OK\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in HttpCallStatement with input then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "16:15 OutcomeStatement - Result Not Found: returning \\"OK\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in HttpCallStatement with strict input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "8:22 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
1:12 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
11:29 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
    "warnings": "16:15 OutcomeStatement - Result Not Found: returning \\"OK\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in HttpCallStatement with strict input then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "16:15 OutcomeStatement - Result Not Found: returning \\"OK\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator input input referenced in SetStatement with input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:17 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
1:12 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
7:17 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
  },
}
`;

exports[`MapValidator input input referenced in SetStatement with input then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator input input referenced in SetStatement with strict input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:17 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
1:12 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.wrong
7:17 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong",
  },
}
`;

exports[`MapValidator input input referenced in SetStatement with strict input then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator input input referenced in arguments of CallStatement with input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:65 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
7:95 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.so.wrong
1:15 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.so.wrong
7:125 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.something.really.wrong.do.not.do.this
1:51 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.something.really.wrong.do.not.do.this",
  },
}
`;

exports[`MapValidator input input referenced in arguments of CallStatement with input then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator input input referenced in arguments of CallStatement with strict input then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:65 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
1:19 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.wrong
7:95 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.so.wrong
1:15 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.so.wrong
7:125 JessieExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.something.really.wrong.do.not.do.this
1:51 PropertyAccessExpression - Wrong Input Structure: expected person, to, from, text, but got input.person.something.really.wrong.do.not.do.this",
  },
}
`;

exports[`MapValidator input input referenced in arguments of CallStatement with strict input then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is PrimitiveTypeName then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:21 PrimitiveLiteral - Wrong Structure: expected NOTFOUND or BADREQUEST, but got \\"wrong\\"",
  },
}
`;

exports[`MapValidator result & error error is PrimitiveTypeName then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a jessie script array then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"{...a.map(val => val.toUpperCase())}\\"
1:37 ObjectLiteralExpression - Wrong Structure: expected ListStructure, but got \\"{...a.map(val => val.toUpperCase())}\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"{
              f1: 'some string',
              f2: true
            }\\"
1:72 ObjectLiteralExpression - Wrong Structure: expected ListStructure, but got \\"{
              f1: 'some string',
              f2: true
            }\\"",
  },
}
`;

exports[`MapValidator result & error error is a jessie script array then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a jessie script object then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ObjectStructure, but got \\"['some string', true]\\"
1:22 ArrayLiteralExpression - Wrong Structure: expected ObjectStructure, but got \\"['some string', true]\\"",
  },
}
`;

exports[`MapValidator result & error error is a jessie script object then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a jessie script primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected string, but got \\"['some string', true]\\"
1:22 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"['some string', true]\\"
6:23 JessieExpression - Wrong Structure: expected string, but got \\"{
            f1: 'some string',
            f2: true
          }\\"
1:66 ObjectLiteralExpression - Wrong Structure: expected string, but got \\"{
            f1: 'some string',
            f2: true
          }\\"
10:23 PrimitiveLiteral - Wrong Structure: expected string, but got \\"true\\"
11:23 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
12:23 JessieExpression - Wrong Structure: expected string, but got \\"2+25\\"
1:5 BinaryExpression - Wrong Structure: expected string, but got \\"2+25\\"",
  },
}
`;

exports[`MapValidator result & error error is a jessie script primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list non null list with primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error error is a list non null list with primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list non null primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
1:7 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[undefined]\\"
1:12 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[undefined]\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
8:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
9:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error error is a list non null primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list non null primitive type or possibly null object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error error is a list non null primitive type or possibly null object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list non null primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
2:6 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[{}]\\"
2:4 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, {}]\\"
8:10 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"
8:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
8:9 FirstLiteralToken - Wrong Structure: expected boolean, but got \\"2\\"
9:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
2:8 ArrayLiteralExpression - Wrong Structure: expected boolean, but got \\"[true]\\"",
  },
}
`;

exports[`MapValidator result & error error is a list non null primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
1:4 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
7:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"",
  },
}
`;

exports[`MapValidator result & error error is a list primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is a list primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
2:3 FirstLiteralToken - Wrong Structure: expected boolean, but got \\"2\\"
6:23 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[{}]\\"
2:4 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"",
  },
}
`;

exports[`MapValidator result & error error is a list primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error error is an object fields: f1, f2, where f2 is non null then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"
10:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"",
    "warnings": "9:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f2, f3",
  },
}
`;

exports[`MapValidator result & error error is an object fields: f1, f2, where f2 is non null then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "24:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3
29:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f2, f3",
  },
}
`;

exports[`MapValidator result & error error is an object non null field f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
9:20 JessieExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"
1:16 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"",
  },
}
`;

exports[`MapValidator result & error error is an object non null field f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "10:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f3
14:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f3",
  },
}
`;

exports[`MapValidator result & error error is an object non null fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
9:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
10:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error error is an object non null fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "17:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
21:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error error is an object non null object with two required fields f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 ObjectLiteral - Missing required field
5:23 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
7:23 ObjectLiteral - Missing required field
10:23 ObjectLiteral - Missing required field
13:23 JessieExpression - Wrong Structure: expected ObjectStructure, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected ObjectStructure, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error error is an object non null object with two required fields f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "9:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error error is an object one required and one not required field: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
11:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
10:23 ObjectLiteral - Missing required field
14:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
15:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
17:23 ObjectLiteral - Missing required field",
  },
}
`;

exports[`MapValidator result & error error is an object one required and one not required field: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "12:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
16:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error error is an object one required field: f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error error is an object one required field: f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "8:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f3",
  },
}
`;

exports[`MapValidator result & error error is an object possibly null field f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "ObjectLiteral - Wrong Structure: expected string, but got \\"ObjectLiteral\\"",
  },
}
`;

exports[`MapValidator result & error error is an object possibly null field f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "10:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f2
14:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f2
18:23 ObjectLiteral - Wrong Object Structure: expected f1, but got f2",
  },
}
`;

exports[`MapValidator result & error error is an object possibly null fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"
1:16 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"",
  },
}
`;

exports[`MapValidator result & error error is an object possibly null fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "27:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
31:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f3",
  },
}
`;

exports[`MapValidator result & error error is an object required fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:23 ObjectLiteral - Missing required field
5:23 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
7:23 ObjectLiteral - Missing required field
11:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
10:23 ObjectLiteral - Missing required field
14:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
15:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
17:23 ObjectLiteral - Missing required field
20:23 ObjectLiteral - Missing required field",
  },
}
`;

exports[`MapValidator result & error error is an object required fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "9:23 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error error is conditioned then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "6:24 JessieExpression - Wrong Structure: expected string, but got \\"{}\\"
1:3 ObjectLiteralExpression - Wrong Structure: expected string, but got \\"{}\\"
8:31 PrimitiveLiteral - Wrong Structure: expected ObjectStructure, but got \\"some string\\"",
  },
}
`;

exports[`MapValidator result & error map is using http call then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "8:24 JessieExpression - Wrong Structure: expected string, but got \\"{}\\"
1:3 ObjectLiteralExpression - Wrong Structure: expected string, but got \\"{}\\"",
  },
}
`;

exports[`MapValidator result & error map is using http call then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "6:11 HttpCallStatement - Wrong Structure: expected string, but got \\"ScalarStructure\\"",
  },
}
`;

exports[`MapValidator result & error map is using inline call then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is PrimitiveTypeName then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:22 PrimitiveLiteral - Wrong Structure: expected NOTFOUND or BADREQUEST, but got \\"wrong\\"",
  },
}
`;

exports[`MapValidator result & error result is PrimitiveTypeName then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a jessie script array then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"{...a.map(val => val.toUpperCase())}\\"
1:37 ObjectLiteralExpression - Wrong Structure: expected ListStructure, but got \\"{...a.map(val => val.toUpperCase())}\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"{
              f1: 'some string',
              f2: true
            }\\"
1:72 ObjectLiteralExpression - Wrong Structure: expected ListStructure, but got \\"{
              f1: 'some string',
              f2: true
            }\\"",
  },
}
`;

exports[`MapValidator result & error result is a jessie script array then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a jessie script object then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ObjectStructure, but got \\"['some string', true]\\"
1:22 ArrayLiteralExpression - Wrong Structure: expected ObjectStructure, but got \\"['some string', true]\\"",
  },
}
`;

exports[`MapValidator result & error result is a jessie script object then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a jessie script primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected string, but got \\"['some string', true]\\"
1:22 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"['some string', true]\\"
6:24 JessieExpression - Wrong Structure: expected string, but got \\"{
            f1: 'some string',
            f2: true
          }\\"
1:66 ObjectLiteralExpression - Wrong Structure: expected string, but got \\"{
            f1: 'some string',
            f2: true
          }\\"
10:24 PrimitiveLiteral - Wrong Structure: expected string, but got \\"true\\"
11:24 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
12:24 JessieExpression - Wrong Structure: expected string, but got \\"2+25\\"
1:5 BinaryExpression - Wrong Structure: expected string, but got \\"2+25\\"",
  },
}
`;

exports[`MapValidator result & error result is a jessie script primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list non null list with primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error result is a list non null list with primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list non null primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
1:7 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[undefined]\\"
1:12 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[undefined]\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
8:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
9:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error result is a list non null primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list non null primitive type or possibly null object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
1:10 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"",
  },
}
`;

exports[`MapValidator result & error result is a list non null primitive type or possibly null object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list non null primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[null]\\"
2:6 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[{}]\\"
2:4 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, {}]\\"
8:10 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"
8:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2]\\"
8:9 FirstLiteralToken - Wrong Structure: expected boolean, but got \\"2\\"
9:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
2:8 ArrayLiteralExpression - Wrong Structure: expected boolean, but got \\"[true]\\"",
  },
}
`;

exports[`MapValidator result & error result is a list non null primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list primitive or object type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
1:4 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
1:9 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[[true]]\\"
7:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"
1:14 ArrayLiteralExpression - Wrong Structure: expected ListStructure, but got \\"[true, 2, {}]\\"",
  },
}
`;

exports[`MapValidator result & error result is a list primitive or object type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is a list primitive type then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[2]\\"
2:3 FirstLiteralToken - Wrong Structure: expected boolean, but got \\"2\\"
6:24 JessieExpression - Wrong Structure: expected ListStructure, but got \\"[{}]\\"
2:4 ObjectLiteralExpression - Wrong Structure: expected boolean, but got \\"{}\\"",
  },
}
`;

exports[`MapValidator result & error result is a list primitive type then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is an object fields: f1, f2, where f2 is non null then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"
10:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"",
    "warnings": "9:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object fields: f1, f2, where f2 is non null then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "24:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3
29:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object non null field f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
9:20 JessieExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"
1:16 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"",
  },
}
`;

exports[`MapValidator result & error result is an object non null field f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "10:24 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f3
14:24 ObjectLiteral - Wrong Object Structure: expected f1, but got f3",
  },
}
`;

exports[`MapValidator result & error result is an object non null fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
9:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
10:20 JessieExpression - Wrong Structure: expected number, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected number, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error result is an object non null fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "17:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
21:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object non null object with two required fields f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 ObjectLiteral - Missing required field
5:24 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
7:24 ObjectLiteral - Missing required field
10:24 ObjectLiteral - Missing required field
13:24 JessieExpression - Wrong Structure: expected ObjectStructure, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected ObjectStructure, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error result is an object non null object with two required fields f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "9:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object one required and one not required field: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
11:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
10:24 ObjectLiteral - Missing required field
14:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
15:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
17:24 ObjectLiteral - Missing required field",
  },
}
`;

exports[`MapValidator result & error result is an object one required and one not required field: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "12:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
16:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object one required field: f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"",
  },
}
`;

exports[`MapValidator result & error result is an object one required field: f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "8:24 ObjectLiteral - Wrong Object Structure: expected f1, but got f1, f3",
  },
}
`;

exports[`MapValidator result & error result is an object possibly null field f1 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "ObjectLiteral - Wrong Structure: expected string, but got \\"ObjectLiteral\\"",
  },
}
`;

exports[`MapValidator result & error result is an object possibly null field f1 then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is an object possibly null fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:20 JessieExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"
1:16 ArrayLiteralExpression - Wrong Structure: expected string, but got \\"[\\"some\\", \\"key\\"]\\"",
  },
}
`;

exports[`MapValidator result & error result is an object possibly null fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "27:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f3
31:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f3",
  },
}
`;

exports[`MapValidator result & error result is an object required fields: f1, f2 then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:24 ObjectLiteral - Missing required field
5:24 ObjectLiteral - Missing required field
8:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
7:24 ObjectLiteral - Missing required field
11:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
10:24 ObjectLiteral - Missing required field
14:20 JessieExpression - Wrong Structure: expected string, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected string, but got \\"null\\"
15:20 JessieExpression - Wrong Structure: expected boolean, but got \\"null\\"
1:5 NullKeyword - Wrong Structure: expected boolean, but got \\"null\\"
17:24 ObjectLiteral - Missing required field
20:24 ObjectLiteral - Missing required field",
  },
}
`;

exports[`MapValidator result & error result is an object required fields: f1, f2 then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "9:24 ObjectLiteral - Wrong Object Structure: expected f1, f2, but got f1, f2, f3",
  },
}
`;

exports[`MapValidator result & error result is an object that uses dot.notation for fields then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "ObjectLiteral - Wrong Structure: expected number, but got \\"ObjectLiteral\\"
ObjectLiteral - Wrong Structure: expected number, but got \\"ObjectLiteral\\"",
  },
}
`;

exports[`MapValidator result & error result is an object that uses dot.notation for fields then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is conditioned then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "6:24 JessieExpression - Wrong Structure: expected string, but got \\"{}\\"
1:3 ObjectLiteralExpression - Wrong Structure: expected string, but got \\"{}\\"",
  },
}
`;

exports[`MapValidator result & error result is variable in different scopes then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:19 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
18:24 JessieExpression - Wrong Variable Structure: variable a.c expected string, but got false",
  },
}
`;

exports[`MapValidator result & error result is variable reassigned (object) then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:19 PrimitiveLiteral - Wrong Structure: expected ObjectStructure, but got \\"string\\"
8:24 JessieExpression - Wrong Variable Structure: variable foo expected ObjectStructure, but got string",
  },
}
`;

exports[`MapValidator result & error result is variable reassigned (object) then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "ObjectLiteral - Wrong Object Structure: expected f1, f2, but got , ",
  },
}
`;

exports[`MapValidator result & error result is variable reassigned (string) then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "6:19 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
7:24 JessieExpression - Wrong Variable Structure: variable a.b expected string, but got false",
  },
}
`;

exports[`MapValidator result & error result is variable reassigned (string) then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is variable referenced in outcome then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "ObjectLiteral - Wrong Structure: expected string, but got \\"ObjectLiteral\\"
6:24 JessieExpression - Wrong Variable Structure: variable a expected string, but got ObjectLiteral",
  },
}
`;

exports[`MapValidator result & error result is variable referenced in outcome then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is variable using variable with string key then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:25 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
6:24 JessieExpression - Wrong Variable Structure: variable foo.bar.a expected string, but got false",
  },
}
`;

exports[`MapValidator result & error result is variable using variable with string key then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidator result & error result is variable wrong structure then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:19 PrimitiveLiteral - Wrong Structure: expected string, but got \\"false\\"
6:24 JessieExpression - Wrong Variable Structure: variable a.b expected string, but got false",
  },
}
`;

exports[`MapValidator usecase-map compatibility missing maps then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "2:7 MapDocument - Map not found: Test2",
  },
}
`;

exports[`MapValidator usecase-map compatibility multiple maps then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "2:7 MapDocument - Extra Maps Found: Test, but got Test, Test2",
  },
}
`;

exports[`MapValidator usecase-map compatibility profile error missing then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "5:11 OutcomeStatement - Error Not Found: returning \\"some string\\", but there is no error defined in usecase",
  },
}
`;

exports[`MapValidator usecase-map compatibility profile input missing then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "7:25 JessieExpression - Input Not Found: input.something - there is no input defined in usecase
1:16 PropertyAccessExpression - Input Not Found: input.something - there is no input defined in usecase
9:40 JessieExpression - Input Not Found: input.some.variable - there is no input defined in usecase
1:20 PropertyAccessExpression - Input Not Found: input.some.variable - there is no input defined in usecase",
    "warnings": "11:11 OutcomeStatement - Result Not Found: returning \\"JessieExpression\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator usecase-map compatibility profile result missing then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "5:11 OutcomeStatement - Result Not Found: returning \\"some string\\", but there is no result defined in usecase",
  },
}
`;

exports[`MapValidator usecase-map compatibility wrong profile name then validation will fail 1`] = `
Object {
  "wrong-test": Object {
    "errors": "1:1 MapHeader - Wrong Profile Name: expected profile, but got wrong",
  },
}
`;

exports[`MapValidator usecase-map compatibility wrong scope then validation will fail 1`] = `
Object {
  "test-test": Object {
    "errors": "1:1 MapHeader - Wrong Scope: expected no scope in profile, but got starwars
1:1 MapHeader - Wrong Profile Name: expected profile, but got test",
  },
}
`;

exports[`MapValidator usecase-map compatibility wrong version then validation will fail 1`] = `
Object {
  "test-test": Object {
    "errors": "1:1 MapHeader - Wrong Profile Name: expected profile, but got test
1:1 MapHeader - Wrong Profile Version: profile is 1.0.0, but map requests 2.0.0",
  },
}
`;
